memory leak fix

--- a/changelogs/1.x.md
+++ b/changelogs/1.x.md
@@ -1,5 +1,9 @@
-Initial Release
+# Initial Release
 
+## 1.01
+- Optimization issues fix
+
+## 1.00
 - Support for single and multimaster mode
 - Added general metrics for exporter
 - Jobs filtration for metrics
